--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                           <br>  Email: si.xu.20@ucl.ac.uk
                </p>       
 
-               <p class="desc"> <span class="bolded">Affiliations</span>    
+               <p class="desc"> <span style="font-weight:bold">Other Affiliations:</span>   
                           <br> <a href="https://www.cream-migration.org/peopledetail.htm?person=3506">Research Officer</a>, 
                           <br> Center for Research and Analysis for Migration (CReAM), 
                           <br> University College London.
@@ -78,7 +78,7 @@
                   </div>
                </div>
                <div class="clearfix">
-                  <p>I am interested in labor economics related to aging issues. </p>
+                  <p>I am a labor economist researching topics related to aging issues. </p>
                </div>
           
             </article>
