--- a/teaching/index.html
+++ b/teaching/index.html
@@ -59,7 +59,7 @@
       </div>
 
 
-         <h2> <a href="/blog/" style="color: inherit">Lastest activities </a> </h2>
+         <h2 <a href="/blog/" style="color: inherit">Lastest activities </a> </h2>
                <div class="news">
                   <div class="table-responsive" style="max-height: 60vw">
                      <table class="table table-sm table-borderless">
