--- a/teaching/index.html
+++ b/teaching/index.html
@@ -31,9 +31,8 @@
                <a class="navbar-brand title font-weight-lighter" href="/"> <span class="font-weight-bold">Si Xu</span> </a> <button class="navbar-toggler collapsed ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar top-bar"></span> <span class="icon-bar middle-bar"></span> <span class="icon-bar bottom-bar"></span> </button> 
                <div class="collapse navbar-collapse text-right" id="navbarNav">
                   <ul class="navbar-nav ml-auto flex-nowrap">
-                     <li class="nav-item "> <a class="nav-link" href="/">about </a> </li>
-                     <li class="nav-item "> <a class="nav-link" href="/projects/">projects </a> </li>
-                     <li class="nav-item "> <a class="nav-link" href="/cv/">cv </a> </li>
+                     <li class="nav-item "> <a class="nav-link" href="/">About </a> </li>
+                     <li class="nav-item "> <a class="nav-link" href="/projects/">Projects </a> </li>
                      <li class="nav-item active"> <a class="nav-link" href="/teaching/">Teaching <span class="sr-only">(current)</span> </a> </li>
                      <li class="toggle-container"> <button id="light-toggle" title="Change theme"> <i class="ti ti-sun-moon" id="light-toggle-system"></i> <i class="ti ti-moon-filled" id="light-toggle-dark"></i> <i class="ti ti-sun-filled" id="light-toggle-light"></i> </button> </li>
                   </ul>
