change the header color

--- a/teaching/index.html
+++ b/teaching/index.html
@@ -50,7 +50,7 @@
                <p> This section lists my teaching assistant experience. </p>
                
             </header>
-               <h2 style="color: inherit"> University College London   </h2>
+               <h2 style="color: DarkViolet"> University College London   </h2>
                <div class="news">
                   <div class="table-responsive" style="max-height: 60vw">
                      <table class="table table-sm table-borderless">
@@ -73,7 +73,7 @@
                   </div>
                </div>
 
-               <h2 style="color: inherit">Duke University  </h2>
+               <h2 style="color: DarkViolet">Duke University  </h2>
                <div class="news">
                   <div class="table-responsive" style="max-height: 60vw">
                      <table class="table table-sm table-borderless">
@@ -91,7 +91,7 @@
                    </div>
                 </div>            
 
-               <h2 style="color: inherit">Central University of Finance and Economics </h2>
+               <h2 style="color: DarkViolet">Central University of Finance and Economics </h2>
                <div class="news">
                   <div class="table-responsive" style="max-height: 60vw">
                      <table class="table table-sm table-borderless">
