--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                <div class="collapse navbar-collapse text-right" id="navbarNav">
                   <ul class="navbar-nav ml-auto flex-nowrap">
                      <li class="nav-item active"> <a class="nav-link" href="/">About <span class="sr-only">(current)</span> </a> </li>
-                     <li class="nav-item "> <a class="nav-link" href="/projects/">Projects </a> </li>
+                     <li class="nav-item "> <a class="nav-link" href="/projects/">Research </a> </li>
                      <li class="nav-item "> <a class="nav-link" href="/teaching/">Teaching </a> </li>
                      <li class="toggle-container"> <button id="light-toggle" title="Change theme"> <i class="ti ti-sun-moon" id="light-toggle-system"></i> <i class="ti ti-moon-filled" id="light-toggle-dark"></i> <i class="ti ti-sun-filled" id="light-toggle-light"></i> </button> </li>
                   </ul>
