--- a/projects/index.html
+++ b/projects/index.html
@@ -50,7 +50,7 @@
 
                <ul>
                     <li style="font-size:130%;">Effects of raising pensionable age on employment: Evidence from Japan
-                    <br> with Saisawat Saisawat Samutpradit (Osaka University)
+                    <br> with Saisawat Samutpradit (Osaka University)
                     </li>
                     <tr>
                     <li style="font-size:130%;">Old-age pension earnings test and labor supply of elderly men: Evidence from residential tax records in Japan
