--- a/projects/index.html
+++ b/projects/index.html
@@ -5,7 +5,7 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title> projects | Si Xu </title>
+      <title> Research | Si Xu </title>
       <meta name="author" content="Si Xu">
       <meta name="description" content="A growing collection of your cool projects.">
       <meta name="keywords" content="jekyll, jekyll-theme, academic-website, portfolio-website">
