chagne background color

--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
          initTheme();
       </script> 
    </head>
-   <body class="fixed-top-nav ">{
-      background-color: #f1f1f1;
-    }
-
+   <body class="fixed-top-nav " style="background-color:HoneyDew;">
       
       <header>
          <nav id="navbar" class="navbar navbar-light navbar-expand-sm fixed-top" role="navigation">
