change font theme

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
          initTheme();
       </script> 
    </head>
-   <body class="fixed-top-nav " style="background-color:HoneyDew;">
+   <body class="fixed-top-nav " style="background-color:HoneyDew;" style="font-family: Serif">
       
       <header>
          <nav id="navbar" class="navbar navbar-light navbar-expand-sm fixed-top" role="navigation">
