add cv in the main paragraph

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 
                   I am a PhD candidate in Economics at University College London (UCL), starting in 2021. 
                   Previously, I received the MRes degree in Economics from UCL in 2021 and the Master's degree in Economics from Duke University in 2020.
-                  My main research interests are labour economics and public policy, particularly on topics related to ageing and the labour supply of older workers.  </p>
+                  My main research interests are labour economics and public policy, particularly on topics related to ageing and the labour supply of older workers.  
+                  You can <a class="nav-link" href="/cv/CV_SI_XU.pdf">download my CV here.</a> </p>
                   
                  
                <p class="desc"> <span style="font-weight:bold">Primary Supervisor:</span> <a href="https://sites.google.com/site/hyejku/"> <em>Prof. Hyejin Ku</em> </a> 
