--- a/projects/index.html
+++ b/projects/index.html
@@ -33,6 +33,7 @@
                   <ul class="navbar-nav ml-auto flex-nowrap">
                      <li class="nav-item "> <a class="nav-link" href="/">About </a> </li>
                      <li class="nav-item active"> <a class="nav-link" href="/projects/">Research <span class="sr-only">(current)</span> </a> </li>
+                     <li class="nav-item "> <a class="nav-link" href="/cv/CV_SI_XU.pdf">CV </a> </li>               
                      <li class="nav-item "> <a class="nav-link" href="/teaching/">Teaching </a> </li>
                      <li class="toggle-container"> <button id="light-toggle" title="Change theme"> <i class="ti ti-sun-moon" id="light-toggle-system"></i> <i class="ti ti-moon-filled" id="light-toggle-dark"></i> <i class="ti ti-sun-filled" id="light-toggle-light"></i> </button> </li>
                   </ul>
