--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
          initTheme();
       </script> 
    </head>
-   <body class="fixed-top-nav " style="background-color:HoneyDew;" style="font-family: Serif">
+   <body class="fixed-top-nav " style="background-color:HoneyDew;" style="font-family: "Times New Roman", Times, serif;>
       
       <header>
          <nav id="navbar" class="navbar navbar-light navbar-expand-sm fixed-top" role="navigation">
@@ -34,8 +34,8 @@
                   <ul class="navbar-nav ml-auto flex-nowrap">
                      <li class="nav-item active"> <a class="nav-link" href="/">About <span class="sr-only">(current)</span> </a> </li>
                      <li class="nav-item "> <a class="nav-link" href="/projects/">Research </a> </li>
+                     <li class="nav-item "> <a class="nav-link" href="/cv/CV_SI_XU.pdf">CV </a> </li>                     
                      <li class="nav-item "> <a class="nav-link" href="/teaching/">Teaching </a> </li>
-                     <li class="nav-item "> <a class="nav-link" href="/cv/CV_SI_XU.pdf">CV </a> </li>
                      <li class="toggle-container"> <button id="light-toggle" title="Change theme"> <i class="ti ti-sun-moon" id="light-toggle-system"></i> <i class="ti ti-moon-filled" id="light-toggle-dark"></i> <i class="ti ti-sun-filled" id="light-toggle-light"></i> </button> </li>
                   </ul>
                </div>
