--- a/projects/index.html
+++ b/projects/index.html
@@ -51,7 +51,7 @@
 
                <ul>
                     <li style="font-size:130%;">Effects of raising pensionable age on employment: Evidence from Japan
-                    <br> with Saisawat Samutpradit (Osaka University)
+                    <br> <em>with  <a class="nav-link" href="https://s-saisw.github.io/"> Saisawat Samutpradit (Osaka University) </a> </em>
                     </li>
                     <p/>
                        
