--- a/projects/index.html
+++ b/projects/index.html
@@ -51,17 +51,17 @@
 
                <ul>
                     <li style="font-size:130%;">Effects of raising pensionable age on employment: Evidence from Japan
-                    <br> <em>with  <a class="nav-link" href="https://s-saisw.github.io/"> Saisawat Samutpradit (Osaka University) </a> </em>
+                    <br> with <em> <a class="nav-link" href="https://s-saisw.github.io/"> Saisawat Samutpradit </a>(Osaka University)  </em>
                     </li>
                     <p/>
                        
                     <li style="font-size:130%;">Old-age pension earnings test and labor supply of elderly men: Evidence from residential tax records in Japan
-                    <br> with Ayako Kondo (University of Tokyo), Saisawat Samutpradit (Osaka University) 
-                    </li>
+                    <br> with <em> <a class="nav-link" href="https://sites.google.com/site/ayakokondoissut/"> Ayako Kondo </a> (University of Tokyo), Saisawat Samutpradit (Osaka University) </em>
+                    </li> 
                     <p/>
 
                     <li style="font-size:130%;">Labor market outcomes of older workers across the business cycle
-                    <br> with Hyejin Ku (University College London) 
+                    <br> with <em> <a class="nav-link" href="https://sites.google.com/site/hyejku/home">Hyejin Ku (University College London) </a> </em>
                     </li>  
                     <p/>   
                </ul>               
