--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
          initTheme();
       </script> 
    </head>
-   <body class="fixed-top-nav " style="background-color:HoneyDew;" style="font-family: "Times New Roman", Times, serif;>
+   <body class="fixed-top-nav " style="background-color:HoneyDew; font-family: 'Times New Roman', Times, serif;">
       
       <header>
          <nav id="navbar" class="navbar navbar-light navbar-expand-sm fixed-top" role="navigation">
