--- a/teaching/index.html
+++ b/teaching/index.html
@@ -51,10 +51,10 @@
                <p> This section lists my teaching assistant experience. </p>
                
             </header>
-               <h2 style="color: DarkMagenta"> University College London   </h2>
+               <h3 style="color: DarkMagenta"> University College London   </h3>
                <div class="news">
                   <div class="table-responsive" style="max-height: 60vw">
-                     <table class="table table-sm table-borderless">
+                     <table class="table table-sm table-borderless; border-spacing: 300px;">
                         <tr>
                            <th scope="row" style="width: 30%">Jan, 2023 - present</th>
                            <td> Economics of Education,
@@ -74,7 +74,7 @@
                   </div>
                </div>
 
-               <h2 style="color: DarkMagenta">Duke University  </h2>
+               <h3 style="color: DarkMagenta">Duke University  </h3>
                <div class="news">
                   <div class="table-responsive" style="max-height: 60vw">
                      <table class="table table-sm table-borderless">
