--- a/teaching/index.html
+++ b/teaching/index.html
@@ -58,12 +58,12 @@
                         <tr>
                            <th scope="row" style="width: 30%">Jan, 2023 - present</th>
                            <td> Economics of Education,
-                           <br> Department of Economics, BSc level </td>
+                            Department of Economics, BSc level </td>
                         </tr>
                         <tr>
                            <th scope="row" style="width: 30%">Jan, 2023 - March, 2024</th>
                            <td> Introduction to Economic Thinking, 
-                           <br> Department of Economics, BSc level </td>
+                           Department of Economics, BSc level </td>
                         </tr>
                         <tr>
                            <th scope="row" style="width: 30%">Oct, 2021 - May, 2022</th>
