--- a/teaching/index.html
+++ b/teaching/index.html
@@ -28,7 +28,7 @@
       <header>
          <nav id="navbar" class="navbar navbar-light navbar-expand-sm fixed-top" role="navigation">
             <div class="container">
-               <a class="navbar-brand title font-weight-lighter" href="/"> <span class="font-weight-bold">Si Xu</span> </a> <button class="navbar-toggler collapsed ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar top-bar"></span> <span class="icon-bar middle-bar"></span> <span class="icon-bar bottom-bar"></span> </button> 
+               <a class="navbar-brand title font-weight-lighter" href="/"> <span class="font-weight-bold">Si Xu（徐思） </span> </a> <button class="navbar-toggler collapsed ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar top-bar"></span> <span class="icon-bar middle-bar"></span> <span class="icon-bar bottom-bar"></span> </button> 
                <div class="collapse navbar-collapse text-right" id="navbarNav">
                   <ul class="navbar-nav ml-auto flex-nowrap">
                      <li class="nav-item "> <a class="nav-link" href="/">About </a> </li>
@@ -51,55 +51,49 @@
                <p> This section lists my teaching assistant experience. </p>
                
             </header>
-               <h4 style="color: DarkMagenta"> University College London   </h4>
+               <h5 style="color: DarkMagenta"> University College London   </h5>
                <div class="news">
                   <div class="table-responsive" style="max-height: 60vw">
-                     <table class="table table-sm table-borderless;">
+                     <table class="table table-sm table-borderless">
                         <tr>
                            <th scope="row" style="width: 30%">Jan, 2023 - present</th>
-                           <td> Economics of Education,
-                            Department of Economics, BSc level </td>
+                           <td> Economics of Education, Department of Economics, BSc level </td>
                         </tr>
                         <tr>
                            <th scope="row" style="width: 30%">Jan, 2023 - March, 2024</th>
-                           <td> Introduction to Economic Thinking, 
-                           Department of Economics, BSc level </td>
+                           <td> Introduction to Economic Thinking, Department of Economics, BSc level </td>
                         </tr>
                         <tr>
                            <th scope="row" style="width: 30%">Oct, 2021 - May, 2022</th>
-                           <td> Economics, Bsc intro level 
-                           <br> Department of Economics, BSc level </td>
+                           <td> Economics, Department of Economics, BSc level </td>
                         </tr>
                      </table>
                   </div>
                </div>
 
-               <h4 style="color: DarkMagenta">Duke University  </h4>
+               <h5 style="color: DarkMagenta">Duke University  </h5>
                <div class="news">
                   <div class="table-responsive" style="max-height: 60vw">
                      <table class="table table-sm table-borderless">
                         <tr>
                            <th scope="row" style="width: 30%">Jan, 2020 - May, 2020</th>
-                           <td> Selected Topics in Economics: Microeconometric tools, 
-                           <br> Department of Economics, Master Level </td>
+                           <td> Selected Topics in Economics: Microeconometric tools, Department of Economics, Master Level </td>
                         </tr>
                         <tr>
                            <th scope="row" style="width: 30%">Jan, 2019 - Aug, 2019</th>
-                           <td> Quantitative Business Analysis,
-                           <br> Fuqua Business School, Master level</td>
+                           <td> Quantitative Business Analysis, Fuqua Business School, Master level</td>
                         </tr>
                      </table>
                    </div>
                 </div>            
 
-               <h4 style="color: DarkMagenta">Central University of Finance and Economics </h4>
+               <h5 style="color: DarkMagenta">Central University of Finance and Economics </h5>
                <div class="news">
                   <div class="table-responsive" style="max-height: 60vw">
                      <table class="table table-sm table-borderless">
                         <tr>
                            <th scope="row" style="width: 30%">2015</th>
-                           <td> Intermediate Macroeconomics, 
-                           <br> Department of Economics, undergraduate Level </td>
+                           <td> Intermediate Macroeconomics, Department of Economics, undergraduate Level </td>
                         </tr>
                      </table>
                    </div>
