--- a/teaching/index.html
+++ b/teaching/index.html
@@ -54,7 +54,7 @@
                <h5 style="color: DarkMagenta"> University College London   </h5>
                <div class="news">
                   <div class="table-responsive" style="max-height: 60vw">
-                     <table class="table table-sm table-borderless">
+                     <table class="table table-sm table-borderless" cellpadding=0 cellspacing=0>
                         <tr>
                            <th scope="row" style="width: 30%">Jan, 2023 - present</th>
                            <td> Economics of Education, Department of Economics, BSc level </td>
