--- a/projects/index.html
+++ b/projects/index.html
@@ -34,7 +34,7 @@
         border: none;
         color: white;
         padding: 12px 16px;
-        font-size: 16px;
+        font-size: 8px;
         cursor: pointer;
       }
 
@@ -73,11 +73,9 @@
                <ul>
                     <li style="font-size:130%;">Effects of raising pensionable age on employment: Evidence from Japan
                     <br>  <em> with <a href="https://s-saisw.github.io/"> Saisawat Samutpradit </a>(Osaka University)  </em>
+                    <br> <button onclick="myFunction()" class="btn"><i class="fa fa-bars"></i> Abstract</button>
+                         <div id="myDIV"> This is the abstract to be added </div> 
                     </li>
-               </ul>    
-                    <button onclick="myFunction()" class="btn"><i class="fa fa-bar"></i> Abstract</button>
-                    <div id="myDIV"> This is the abstract to be added </div> 
-                  
                <ul>        
                     <li style="font-size:130%;">Old-age pension earnings test and labor supply of elderly men: Evidence from residential tax records in Japan
                     <br> <em> with  <a href="https://sites.google.com/site/ayakokondoissut/"> Ayako Kondo </a> (University of Tokyo), Saisawat Samutpradit (Osaka University) </em>
@@ -85,7 +83,7 @@
                     <p/>
 
                     <li style="font-size:130%;">Labor market outcomes of older workers across the business cycle
-                    <br> <em> with  <a  href="https://sites.google.com/site/hyejku/home">Hyejin Ku (University College London) </a> </em>
+                    <br> <em> with  <a  href="https://sites.google.com/site/hyejku/home">Hyejin Ku </a> (University College London) </em>
                     </li>  
                     <p/>   
                </ul>               
