--- a/projects/index.html
+++ b/projects/index.html
@@ -25,7 +25,7 @@
       #myDIV {
         width: 600px;
         height: 100px;
-        background:HoneyDew80;
+        background: #F0FFF050;
       }
       </style>
       <style>
@@ -73,7 +73,8 @@
                <ul>
                     <li style="font-size:130%;">Effects of raising pensionable age on employment: Evidence from Japan
                     <br>  <em> with <a href="https://s-saisw.github.io/"> Saisawat Samutpradit </a>(Osaka University)  </em>
-                    <br> <button onclick="myFunction()" class="btn"><i class="fa fa-bars"></i> Abstract</button>
+                    <br> Abstract: <button onclick="myFunction()" class="btn"><i class="fa fa-bars"></i></button> 
+                         Draft: <button onclick="myFunction()" class="btn"><i class="&#x25BA"></i></button> 
                          <div id="myDIV"> This is the abstract to be added </div> 
                     </li>
                     <p/>      
