test for button

--- a/projects/index.html
+++ b/projects/index.html
@@ -30,17 +30,17 @@
       </style>
       <style>
       .btn {
-        background-color: DodgerBlue;
+        background-color: HoneyDew;
         border: none;
         color: white;
         padding: 6px 8px;
-        font-size: 8px;
+        font-size: 6px;
         cursor: pointer;
       }
 
       /* Darker background on mouse-over */
       .btn:hover {
-        background-color: RoyalBlue;
+        background-color: DarkSeaGreen;
       }
       </style>
    </head>
@@ -74,7 +74,7 @@
                     <li style="font-size:130%;">Effects of raising pensionable age on employment: Evidence from Japan
                     <br>  <em> with <a href="https://s-saisw.github.io/"> Saisawat Samutpradit </a>(Osaka University)  </em>
                     <br> Abstract: <button onclick="myFunction()" class="btn"><i class="fa fa-bars"></i></button> 
-                         Draft: <button onclick="myFunction()" class="btn"><i class="&#x25BA"></i></button> 
+                         Draft: <button onclick="myFunction()" class="btn"><i> Draft</i></button> 
                          <div id="myDIV"> This is the abstract to be added </div> 
                     </li>
                     <p/>      
