--- a/projects/index.html
+++ b/projects/index.html
@@ -31,16 +31,23 @@
       <style>
       .btn {
         background-color: HoneyDew;
+        border-radius: 4px;
         border: none;
         color: white;
         padding: 6px 8px;
-        font-size: 6px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 8px;
+        margin: 4px 2px;
         cursor: pointer;
       }
 
       /* Darker background on mouse-over */
       .btn:hover {
         background-color: DarkSeaGreen;
+        color: HoneyDew;
+        border: 1px solid #ccc;
       }
       </style>
    </head>
@@ -74,7 +81,7 @@
                     <li style="font-size:130%;">Effects of raising pensionable age on employment: Evidence from Japan
                     <br>  <em> with <a href="https://s-saisw.github.io/"> Saisawat Samutpradit </a>(Osaka University)  </em>
                     <br> Abstract: <button onclick="myFunction()" class="btn"><i class="fa fa-bars"></i></button> 
-                         Draft: <button onclick="myFunction()" class="btn"><i> Draft</i></button> 
+                         Draft: <button onclick="myFunction()" class="btn"> Draft </button> 
                          <div id="myDIV"> This is the abstract to be added </div> 
                     </li>
                     <p/>      
