--- a/projects/index.html
+++ b/projects/index.html
@@ -33,20 +33,20 @@
         background-color: HoneyDew;
         border-radius: 4px;
         border: none;
-        color: white;
+        color: dark;
         padding: 6px 8px;
         text-align: center;
         text-decoration: none;
         display: inline-block;
-        font-size: 8px;
-        margin: 4px 2px;
+        font-size: 10px;
+        margin: 1px 1px;
         cursor: pointer;
       }
 
       /* Darker background on mouse-over */
       .btn:hover {
         background-color: DarkSeaGreen;
-        color: HoneyDew;
+        color: Dark;
         border: 1px solid #ccc;
       }
       </style>
@@ -80,8 +80,8 @@
                <ul>
                     <li style="font-size:130%;">Effects of raising pensionable age on employment: Evidence from Japan
                     <br>  <em> with <a href="https://s-saisw.github.io/"> Saisawat Samutpradit </a>(Osaka University)  </em>
-                    <br> Abstract: <button onclick="myFunction()" class="btn"><i class="fa fa-bars"></i></button> 
-                         Draft: <button onclick="myFunction()" class="btn"> Draft </button> 
+                    <br> <button onclick="myFunction()" class="btn"> Abstract: </button> 
+                         <button onclick="myFunction()" class="btn"> Download Draft </button> 
                          <div id="myDIV"> This is the abstract to be added </div> 
                     </li>
                     <p/>      
