--- a/projects/index.html
+++ b/projects/index.html
@@ -26,19 +26,19 @@
         width: 600px;
         height: 100px;
         background: #F0FFF050;
+        font-size: 11px;         
       }
       </style>
       <style>
       .btn {
         background-color: HoneyDew;
-        border-radius: 4px;
-        border: none;
+        border: 1px solid #ccc;
         color: dark;
         padding: 6px 8px;
         text-align: center;
         text-decoration: none;
         display: inline-block;
-        font-size: 10px;
+        font-size: 11px;
         margin: 1px 1px;
         cursor: pointer;
       }
@@ -81,7 +81,6 @@
                     <li style="font-size:130%;">Effects of raising pensionable age on employment: Evidence from Japan
                     <br>  <em> with <a href="https://s-saisw.github.io/"> Saisawat Samutpradit </a>(Osaka University)  </em>
                     <br> <button onclick="myFunction()" class="btn"> Abstract: </button> 
-                         <button onclick="myFunction()" class="btn"> Download Draft </button> 
                          <div id="myDIV"> This is the abstract to be added </div> 
                     </li>
                     <p/>      
